--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "tirazel/nextpress-upstream",
-    "description": "Install Nextpress with Composer on Pantheon.",
+    "name": "cu-boulder/tiamat_upstream",
+    "description": "Install Tiamat with Composer on Pantheon.",
     "type": "project",
-    "license": "MIT",
+    "license": "GPL-2.0-or-later",
     "repositories": [
         {
             "type": "composer",
@@ -16,13 +16,41 @@
     "require": {
         "pantheon-upstreams/upstream-configuration": "^1",
         "composer/installers": "^2.1",
-        "drupal/core-composer-scaffold": "^9.3",
-        "drupal/core-recommended": "^9.3",
+        "drupal/core-composer-scaffold": "^9.4",
+        "drupal/core-recommended": "^9.4",
         "pantheon-systems/drupal-integrations": "^9",
-        "cweagans/composer-patches": "^1.7"
+        "cweagans/composer-patches": "^1.7",
+        "cu-boulder/boulder_d9_base": "dev-main",
+        "cu-boulder/boulder_d9_profile": "dev-main",
+        "cu-boulder/ucb_d9_custom_entities": "dev-main",
+        "cu-boulder/ucb_default_content": "dev-main",
+        "cu-boulder/ucb_focal_image_enable": "dev-main",
+        "cu-boulder/ucb_person_title": "dev-main",
+        "cu-boulder/ucb_site_configuration": "dev-main",
+        "cu-boulder/ucb_user_invite": "dev-main",
+        "drupal/admin_toolbar": "^3.0",
+        "drupal/antibot": "^2.0",
+        "drupal/better_social_sharing_buttons": "^3.2",
+        "drupal/consumer_image_styles": "^4.0",
+        "drupal/entity_embed": "^1.1",
+        "drupal/features": "^3.12",
+        "drupal/field_group": "^3.1",
+        "drupal/focal_point": "^1.5",
+        "drupal/gin": "^3.0@alpha",
+        "drupal/gin_lb": "^1.0@beta",
+        "drupal/gin_toolbar": "^1.0@beta",
+        "drupal/layout_builder_modal": "^1.1",
+        "drupal/paragraphs": "^1.14",
+        "drupal/pathauto": "^1.8",
+        "drupal/simplesamlphp_auth": "^3.3",
+        "drupal/smtp": "^1.0",
+        "drupal/twig_tweak": "^3.1",
+        "drupal/webform": "^6.1",
+        "drush/drush": "^11.0",
+        "simplesamlphp/simplesamlphp": "^1.19"
     },
     "require-dev": {
-        "drupal/core-dev": "^9.3"
+        "drupal/core-dev": "^9.4"
     },
     "conflict": {
             "drupal/drupal": "*"
