--- a/composer.json
+++ b/composer.json
@@ -14,24 +14,23 @@
         }
     ],
     "require": {
-        "pantheon-upstreams/upstream-configuration": "^1",
         "composer/installers": "^2.1",
-        "drupal/core-composer-scaffold": "^9.4",
-        "drupal/core-recommended": "^9.4",
-        "pantheon-systems/drupal-integrations": "^9",
-        "cweagans/composer-patches": "^1.7",
         "cu-boulder/boulder_d9_base": "dev-main",
         "cu-boulder/boulder_d9_profile": "dev-main",
+        "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_d9_custom_entities": "dev-main",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
+        "cweagans/composer-patches": "^1.7",
         "drupal/admin_toolbar": "^3.0",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^3.2",
         "drupal/consumer_image_styles": "^4.0",
+        "drupal/core-composer-scaffold": "^9.4",
+        "drupal/core-recommended": "^9.4",
         "drupal/entity_embed": "^1.1",
         "drupal/features": "^3.12",
         "drupal/field_group": "^3.1",
@@ -47,6 +46,8 @@
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.1",
         "drush/drush": "^11.0",
+        "pantheon-systems/drupal-integrations": "^9",
+        "pantheon-upstreams/upstream-configuration": "^1",
         "simplesamlphp/simplesamlphp": "^1.19"
     },
     "require-dev": {
