--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
         "composer/installers": "^2.1",
         "cu-boulder/boulder_d9_base": "dev-main",
         "cu-boulder/boulder_d9_profile": "dev-main",
+        "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_d9_custom_entities": "dev-main",
         "cu-boulder/ucb_default_content": "dev-main",
@@ -39,8 +40,10 @@
         "drupal/gin_lb": "^1.0@beta",
         "drupal/gin_toolbar": "^1.0@beta",
         "drupal/layout_builder_modal": "^1.1",
+        "drupal/pantheon_advanced_page_cache": "^2.0",
         "drupal/paragraphs": "^1.14",
         "drupal/pathauto": "^1.8",
+        "drupal/simple_sitemap": "^4.1",
         "drupal/simplesamlphp_auth": "^3.3",
         "drupal/smtp": "^1.0",
         "drupal/twig_tweak": "^3.1",
