Update lock file

--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "drupal/gin_lb": "^1.0@beta",
         "drupal/gin_toolbar": "^1.0@beta",
         "drupal/layout_builder_modal": "^1.1",
+        "drupal/media_library_form_element": "^2.0",
         "drupal/pantheon_advanced_page_cache": "^2.0",
         "drupal/paragraphs": "^1.14",
         "drupal/pathauto": "^1.8",
