--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "cu-boulder/boulder_d9_profile": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
+        "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_d9_custom_entities": "dev-main",
         "cu-boulder/ucb_default_content": "dev-main",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
