--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "drupal/consumer_image_styles": "^4.0",
         "drupal/core-composer-scaffold": "^9.4",
         "drupal/core-recommended": "^9.4",
+        "drupal/devel": "^5.1",
         "drupal/entity_embed": "^1.1",
         "drupal/features": "^3.12",
         "drupal/field_group": "^3.1",
@@ -44,6 +45,7 @@
         "drupal/gin_toolbar": "^1.0@beta",
         "drupal/layout_builder_modal": "^1.1",
         "drupal/media_library_form_element": "^2.0",
+        "drupal/migrate_plus": "^6.0",
         "drupal/pantheon_advanced_page_cache": "^2.0",
         "drupal/paragraphs": "^1.14",
         "drupal/pathauto": "^1.8",
