--- a/composer.json
+++ b/composer.json
@@ -55,15 +55,12 @@
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.8",
         "drupal/simple_sitemap": "^4.1",
-        "drupal/simplesamlphp_auth": "^4",
         "drupal/smtp": "^1.0",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.2",
         "drush/drush": "^11.0",
         "pantheon-systems/drupal-integrations": "^9",
         "pantheon-upstreams/upstream-configuration": "^1",
-        "simplesamlphp/saml2": "^5@alpha",
-        "simplesamlphp/simplesamlphp": "dev-master#8c6ee7dd6a6",
         "wikimedia/composer-merge-plugin": "^2.0"
     },
     "require-dev": {
@@ -134,20 +131,20 @@
     },
     "scripts": {
         "post-update-cmd": [
-          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
-          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
-          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
-          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+          "#rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+          "#rm -rf vendor/simplesamlphp/simplesamlphp/config",
+          "#rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+          "#ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+          "#ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+          "#ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
         ],
         "post-install-cmd": [
-          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
-          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
-          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
-          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
-          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+          "#rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+          "#rm -rf vendor/simplesamlphp/simplesamlphp/config",
+          "#rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+          "#ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+          "#ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+          "#ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
         ]
 
 
