--- a/composer.json
+++ b/composer.json
@@ -55,12 +55,15 @@
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.8",
         "drupal/simple_sitemap": "^4.1",
+        "drupal/simplesamlphp_auth": "^4",
         "drupal/smtp": "^1.0",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.2",
         "drush/drush": "^11.0",
         "pantheon-systems/drupal-integrations": "^9",
         "pantheon-upstreams/upstream-configuration": "^1",
+        "simplesamlphp/saml2": "v5.0.0-alpha.8",
+        "simplesamlphp/simplesamlphp": "dev-master#8c6ee7dd6a6",
         "wikimedia/composer-merge-plugin": "^2.0"
     },
     "require-dev": {
@@ -88,6 +91,17 @@
         "patches": {
             "drupal/focal_point": {
                 "Focal Point No Upscale": "https://www.drupal.org/files/issues/2020-05-19/focal_point-do_not_upscale-3048398-16.patch"
+            },
+            "drupal/simplesamlphp_auth": {
+                "4.0.0-alpha1 release compatible with D10/Symfony6 - 3349278_documentation_19": "https://www.drupal.org/files/issues/2023-04-05/3349278_documentation_19.patch",
+                "4.0.0-alpha1 release compatible with D10/Symfony6 - 3349278-d10-compatibility_14": "https://www.drupal.org/files/issues/2023-04-04/3349278-d10-compatibility_14.patch",
+                "4.0.0-alpha1 release compatible with D10/Symfony6 - RedirectResponse fix for D10 compatibility": "https://www.drupal.org/files/issues/2023-06-17/simplesamlphp_auth_d10_redirect.patch"
+            },
+            "simplesamlphp/saml2": {
+                "4.0.0-alpha1 release compatible with D10/Symfony6": "https://www.drupal.org/files/issues/2023-06-17/simplesamlphp_saml2_d10_container_singleton.patch"
+            },
+            "simplesamlphp/simplesamlphp": {
+                "Custom patch for d10 NameIDPolicy fix": "https://www.drupal.org/files/issues/2023-06-23/simplesamlphp_d10_nameidpolicy_fix.patch"
             }
         },
         "installer-paths": {
@@ -131,20 +145,20 @@
     },
     "scripts": {
         "post-update-cmd": [
-          "#rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
-          "#rm -rf vendor/simplesamlphp/simplesamlphp/config",
-          "#rm -rf vendor/simplesamlphp/simplesamlphp/cert",
-          "#ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
-          "#ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
-          "#ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
         ],
         "post-install-cmd": [
-          "#rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
-          "#rm -rf vendor/simplesamlphp/simplesamlphp/config",
-          "#rm -rf vendor/simplesamlphp/simplesamlphp/cert",
-          "#ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
-          "#ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
-          "#ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
         ]
 
 
