--- a/composer.json
+++ b/composer.json
@@ -148,5 +148,21 @@
         }
     },
     "scripts": {
+        "post-update-cmd": [
+          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+        ],
+        "post-install-cmd": [
+          "rm -rf vendor/simplesamlphp/simplesamlphp/metadata",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/config",
+          "rm -rf vendor/simplesamlphp/simplesamlphp/cert",
+          "ln -sf ../../../private/metadata vendor/simplesamlphp/simplesamlphp/metadata",
+          "ln -sf ../../../private/config vendor/simplesamlphp/simplesamlphp/config",
+          "ln -sf ../../../private/cert vendor/simplesamlphp/simplesamlphp/cert"
+        ]
     }
 }
