--- a/composer.json
+++ b/composer.json
@@ -220,6 +220,7 @@
         "cu-boulder/ucb_focal_image_enable": "dev-main",
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
+        "cu-boulder/ucb_article_author": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
@@ -230,9 +231,9 @@
         "drupal/better_social_sharing_buttons": "^4.0",
         "drupal/ckeditor5_icons": "^1.0@beta",
         "drupal/consumer_image_styles": "^4.0",
-        "drupal/core-composer-scaffold": "^10.0",
-        "drupal/core-project-message": "^10.0",
-        "drupal/core-recommended": "^10.0",
+        "drupal/core-composer-scaffold": "^10.1",
+        "drupal/core-project-message": "^10.1",
+        "drupal/core-recommended": "^10.1",
         "drupal/devel": "^5.0",
         "drupal/entity_embed": "^1.1",
         "drupal/externalauth": "^2.0",
