adding cu-boulder/ucb_article_author

--- a/composer.json
+++ b/composer.json
@@ -212,6 +212,7 @@
         "cu-boulder/boulder_profile": "dev-main",
         "cu-boulder/shortcode_fork": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
+        "cu-boulder/ucb_article_author": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
