--- a/composer.json
+++ b/composer.json
@@ -212,6 +212,7 @@
         "cu-boulder/boulder_profile": "dev-main",
         "cu-boulder/shortcode_fork": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
+        "cu-boulder/ucb_article_author": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
         "cu-boulder/ucb_campus_news": "dev-main",
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
@@ -220,7 +221,6 @@
         "cu-boulder/ucb_focal_image_enable": "dev-main",
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
-        "cu-boulder/ucb_article_author": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
@@ -245,6 +245,9 @@
         "drupal/gin_toolbar": "^1.0@RC",
         "drupal/google_cse": "^4.0@alpha",
         "drupal/layout_builder_modal": "^1.1",
+        "drupal/media_alias_display": "^2.0",
+        "drupal/media_entity_file_replace": "^1.1",
+        "drupal/media_file_delete": "^1.3",
         "drupal/media_library_form_element": "^2.0",
         "drupal/metatag": "^2.0",
         "drupal/migrate_plus": "^6.0",
@@ -254,6 +257,7 @@
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.8",
         "drupal/simple_sitemap": "^4.1",
+        "drupal/simplesamlphp_auth": "^4.0@dev",
         "drupal/smtp": "^1.0",
         "drupal/twig_tweak": "^3.1",
         "drupal/webform": "^6.2",
@@ -264,15 +268,14 @@
         "jquery/select2": "*",
         "jquery/textcounter": "*",
         "jquery/timepicker": "*",
+        "pantheon-systems/drupal-integrations": "^10",
+        "pantheon-upstreams/upstream-configuration": "^1",
         "popperjs/popperjs": "*",
         "progress-tracker/progress-tracker": "*",
         "signature_pad/signature_pad": "*",
-        "tabby/tabby": "*",
-        "tippyjs/tippyjs": "*",
-        "pantheon-systems/drupal-integrations": "^10",
-        "pantheon-upstreams/upstream-configuration": "^1",
         "simplesamlphp/simplesamlphp": "dev-simplesamlphp-2.1",
-        "drupal/simplesamlphp_auth": "^4.0@dev"
+        "tabby/tabby": "*",
+        "tippyjs/tippyjs": "*"
     },
     "require-dev": {
         "drupal/core-dev": "^10.1"
