--- a/composer.json
+++ b/composer.json
@@ -229,7 +229,8 @@
         "drupal/aggregator": "^2.0",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_icons": "^1.0@beta",
+        "drupal/ckeditor5_icons": "1.x-dev@dev",
+        "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
         "drupal/core-composer-scaffold": "^10.1",
         "drupal/core-project-message": "^10.1",
@@ -249,6 +250,7 @@
         "drupal/media_entity_file_replace": "^1.1",
         "drupal/media_file_delete": "^1.3",
         "drupal/media_library_form_element": "^2.0",
+        "drupal/menu_block": "^1.10",
         "drupal/metatag": "^2.0",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
@@ -256,6 +258,7 @@
         "drupal/paragraphs": "^1.14",
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.8",
+        "drupal/scheduler": "^2.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/simplesamlphp_auth": "^4.0",
         "drupal/smtp": "^1.0",
