--- a/composer.json
+++ b/composer.json
@@ -232,9 +232,9 @@
         "drupal/ckeditor5_icons": "1.x-dev@dev",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
-        "drupal/core-composer-scaffold": "^10.1",
-        "drupal/core-project-message": "^10.1",
-        "drupal/core-recommended": "^10.1",
+        "drupal/core-composer-scaffold": "^10.1.0",
+        "drupal/core-project-message": "^10.1.0",
+        "drupal/core-recommended": "^10.1.0",
         "drupal/devel": "^5.0",
         "drupal/entity_embed": "^1.1",
         "drupal/externalauth": "^2.0",
@@ -341,7 +341,8 @@
             "simplesamlphp/composer-module-installer": true,
             "wikimedia/composer-merge-plugin": true,
             "phpstan/extension-installer": true,
-            "drupal/core-project-message": true
+            "drupal/core-project-message": true,
+            "php-http/discovery": true
         }
     },
     "scripts": {
