Lock Drupal to 10.1.x

--- a/composer.json
+++ b/composer.json
@@ -232,9 +232,9 @@
         "drupal/ckeditor5_icons": "1.x-dev@dev",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
-        "drupal/core-composer-scaffold": "^10.1.0",
-        "drupal/core-project-message": "^10.1.0",
-        "drupal/core-recommended": "^10.1.0",
+        "drupal/core-composer-scaffold": "~10.1.7",
+        "drupal/core-project-message": "~10.1.7",
+        "drupal/core-recommended": "~10.1.7",
         "drupal/devel": "^5.0",
         "drupal/entity_embed": "^1.1",
         "drupal/externalauth": "^2.0",
