--- a/composer.json
+++ b/composer.json
@@ -208,8 +208,8 @@
     "require": {
         "codemirror/codemirror": "*",
         "composer/installers": "^2.1",
-        "cu-boulder/boulder_base": "dev-claro-theme",
-        "cu-boulder/boulder_profile": "dev-claro-theme",
+        "cu-boulder/boulder_base": "dev-main",
+        "cu-boulder/boulder_profile": "dev-main",
         "cu-boulder/shortcode_fork": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
@@ -241,16 +241,14 @@
         "drupal/features": "^3.13",
         "drupal/field_group": "^3.1",
         "drupal/focal_point": "^2.0",
-        "drupal/gin": "^3.0@RC",
-        "drupal/gin_lb": "^1.0@RC",
-        "drupal/gin_toolbar": "^1.0@RC",
         "drupal/google_cse": "^4.0@alpha",
-        "drupal/layout_builder_modal": "^1.1",
+        "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/media_alias_display": "^2.0",
         "drupal/media_entity_file_replace": "^1.1",
         "drupal/media_file_delete": "^1.3",
         "drupal/media_library_form_element": "^2.0",
         "drupal/menu_block": "^1.10",
+        "drupal/menu_firstchild": "^2.1",
         "drupal/metatag": "^2.0",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
