--- a/composer.json
+++ b/composer.json
@@ -243,6 +243,7 @@
         "drupal/focal_point": "^2.0",
         "drupal/google_cse": "^4.0@alpha",
         "drupal/layout_builder_iframe_modal": "^1.3",
+        "drupal/layout_builder_modal": "^1.2",
         "drupal/media_alias_display": "^2.0",
         "drupal/media_entity_file_replace": "^1.1",
         "drupal/media_file_delete": "^1.3",
