--- a/composer.json
+++ b/composer.json
@@ -242,6 +242,9 @@
         "drupal/features": "^3.13",
         "drupal/field_group": "^3.1",
         "drupal/focal_point": "^2.0",
+        "drupal/gin": "^3.0@RC",
+        "drupal/gin_lb": "^1.0@RC",
+        "drupal/gin_toolbar": "^1.0@RC",
         "drupal/google_cse": "^4.0@alpha",
         "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/layout_builder_modal": "^1.2",
