--- a/composer.json
+++ b/composer.json
@@ -247,6 +247,7 @@
         "drupal/gin_lb": "^1.0@RC",
         "drupal/gin_toolbar": "^1.0@RC",
         "drupal/google_cse": "^4.0@alpha",
+        "drupal/google_tag": "^2.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
         "drupal/layout_builder_modal": "^1.2",
 	"drupal/linkit": "^6.1",
