--- a/composer.json
+++ b/composer.json
@@ -211,7 +211,6 @@
         "cu-boulder/boulder_base": "dev-main",
         "cu-boulder/boulder_profile": "dev-main",
         "cu-boulder/express_admin": "dev-main",
-        "cu-boulder/shortcode_fork": "dev-main",
         "cu-boulder/ucb_admin_menus": "dev-main",
         "cu-boulder/ucb_article_author": "dev-main",
         "cu-boulder/ucb_bootstrap_layouts": "dev-main",
@@ -243,13 +242,9 @@
         "drupal/features": "^3.13",
         "drupal/field_group": "^3.1",
         "drupal/focal_point": "^2.0",
-        "drupal/gin": "^3.0@RC",
-        "drupal/gin_lb": "^1.0@RC",
-        "drupal/gin_toolbar": "^1.0@RC",
         "drupal/google_cse": "^4.0@alpha",
         "drupal/google_tag": "^2.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
-        "drupal/layout_builder_modal": "^1.2",
 	"drupal/linkit": "^6.1",
         "drupal/media_alias_display": "^2.0",
         "drupal/media_entity_file_replace": "^1.1",
@@ -265,6 +260,7 @@
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.8",
         "drupal/scheduler": "^2.0",
+        "drupal/shortcode": "^2.0",
         "drupal/simple_sitemap": "^4.1",
         "drupal/simplesamlphp_auth": "^4.0",
         "drupal/smtp": "^1.0",
