--- a/composer.json
+++ b/composer.json
@@ -259,6 +259,7 @@
         "drupal/paragraphs": "^1.14",
         "drupal/pathauto": "^1.8",
         "drupal/redirect": "^1.8",
+        "drupal/responsive_preview": "^2.1",
         "drupal/scheduler": "^2.0",
         "drupal/shortcode": "^2.0",
         "drupal/simple_sitemap": "^4.1",
