--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         }
     },
     "require": {
-        "pantheon-upstreams/upstream-configuration": "dev-main",
+        "pantheon-upstreams/upstream-configuration": "dev-master",
         "composer/installers": "^1.9",
         "cweagans/composer-patches": "^1.7",
         "drush/drush": "^12"
