--- a/composer.json
+++ b/composer.json
@@ -245,7 +245,7 @@
         "drupal/google_cse": "^4.0@alpha",
         "drupal/google_tag": "^2.0",
         "drupal/layout_builder_iframe_modal": "^1.3",
-        "drupal/linkit": "^6.1",
+	"drupal/linkit": "^6.1",
         "drupal/media_alias_display": "^2.0",
         "drupal/media_entity_file_replace": "^1.1",
         "drupal/media_file_delete": "^1.3",
@@ -275,7 +275,6 @@
         "jquery/textcounter": "*",
         "jquery/timepicker": "*",
         "pantheon-systems/drupal-integrations": "^10",
-        "pantheon-systems/upstream-management": "^1.0",
         "pantheon-upstreams/upstream-configuration": "^1",
         "popperjs/popperjs": "*",
         "progress-tracker/progress-tracker": "*",
@@ -352,8 +351,7 @@
             "wikimedia/composer-merge-plugin": true,
             "phpstan/extension-installer": true,
             "drupal/core-project-message": true,
-            "php-http/discovery": true,
-            "pantheon-systems/upstream-management": true
+            "php-http/discovery": true
         }
     },
     "scripts": {
