--- a/composer.json
+++ b/composer.json
@@ -351,7 +351,8 @@
             "wikimedia/composer-merge-plugin": true,
             "phpstan/extension-installer": true,
             "drupal/core-project-message": true,
-            "php-http/discovery": true
+            "php-http/discovery": true,
+            "pantheon-systems/upstream-management": true
         }
     },
     "scripts": {
