--- a/composer.json
+++ b/composer.json
@@ -203,6 +203,18 @@
                 },
                 "license": "MIT"
             }
+        },
+        "anchor": {
+            "type": "package",
+            "package": {
+                "name": "northernco/ckeditor5-anchor-drupal",
+                "version": "0.5.0",
+                "type": "drupal-library",
+                "dist": {
+                "url": "https://registry.npmjs.org/@northernco/ckeditor5-anchor-drupal/-/ckeditor5-anchor-drupal-0.5.0.tgz",
+                "type": "tar"
+                }
+            }
         }
     },
     "require": {
@@ -228,6 +240,7 @@
         "drupal/admin_toolbar": "^3.4",
         "drupal/administerusersbyrole": "^3.4",
         "drupal/aggregator": "^2.0",
+        "drupal/anchor_link": "^3.0@alpha",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^4.0",
         "drupal/ckeditor5_icons": "1.x-dev@dev",
@@ -274,6 +287,7 @@
         "jquery/select2": "*",
         "jquery/textcounter": "*",
         "jquery/timepicker": "*",
+        "northernco/ckeditor5-anchor-drupal": "^0.5.0",
         "pantheon-systems/drupal-integrations": "^10",
         "pantheon-upstreams/upstream-configuration": "^1",
         "popperjs/popperjs": "*",
