--- a/composer.json
+++ b/composer.json
@@ -268,6 +268,7 @@
         "drupal/metatag": "^2.0",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
+        "drupal/migrate_devel": "^2.3",
         "drupal/pantheon_advanced_page_cache": "^2.0",
         "drupal/paragraphs": "^1.14",
         "drupal/pathauto": "^1.8",
