--- a/composer.json
+++ b/composer.json
@@ -367,7 +367,8 @@
             "phpstan/extension-installer": true,
             "drupal/core-project-message": true,
             "php-http/discovery": true,
-            "pantheon-systems/upstream-management": true
+            "pantheon-systems/upstream-management": true,
+            "oomphinc/composer-installers-extender": true
         }
     },
     "scripts": {
