--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,8 @@
             "web/libraries/signature_pad": ["bower-asset/signature-pad"],
             "web/libraries/tabby": ["npm-asset/tabbyjs"],
             "web/libraries/tippyjs": ["npm-asset/tippy.js"],
+            "web/libraries/ckeditor5-anchor-drupal": ["npm-asset/northernco--ckeditor5-anchor-drupal"],
+
             "web/libraries/{$name}": [
                 "type:drupal-library",
                 "type:npm-asset",
