--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -77,6 +77,7 @@
         "drupal/pantheon_advanced_page_cache": "2.2.0",
         "drupal/paragraphs": "1.17.0",
         "drupal/pathauto": "1.12.0",
+        "drupal/recaptcha_v3": "2.0.2",
         "drupal/redirect": "1.9.0",
         "drupal/responsive_preview": "2.1.1",
         "drupal/scheduler": "2.0.3",
@@ -111,19 +112,21 @@
         "doctrine/event-manager": "2.0.1",
         "doctrine/lexer": "2.1.1",
         "doctrine/persistence": "3.3.2",
+        "drupal/captcha": "2.0.5",
         "drupal/consumers": "1.17.0",
         "drupal/core": "10.2.6",
         "drupal/crop": "2.3.0",
         "drupal/ctools": "4.0.4",
         "drupal/embed": "1.7.0",
         "drupal/entity_reference_revisions": "1.11.0",
-        "drupal/jsonapi_extras": "3.24.0",
+        "drupal/jsonapi_extras": "3.25.0",
         "drupal/token": "1.14.0",
         "e0ipso/shaper": "1.2.4",
         "egulias/email-validator": "4.0.2",
         "gettext/gettext": "v5.7.0",
         "gettext/languages": "2.10.0",
         "gettext/translator": "v1.2.0",
+        "google/recaptcha": "1.3.0",
         "grasmash/expander": "3.0.0",
         "grasmash/yaml-cli": "3.2.1",
         "guzzlehttp/guzzle": "7.8.1",
@@ -160,23 +163,23 @@
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
         "simplesamlphp/simplesamlphp-assets-base": "v2.2.0",
-        "symfony/cache": "v6.4.7",
+        "symfony/cache": "v6.4.8",
         "symfony/cache-contracts": "v3.5.0",
-        "symfony/config": "v6.4.7",
-        "symfony/console": "v6.4.7",
-        "symfony/dependency-injection": "v6.4.7",
+        "symfony/config": "v6.4.8",
+        "symfony/console": "v6.4.8",
+        "symfony/dependency-injection": "v6.4.8",
         "symfony/deprecation-contracts": "v3.4.0",
-        "symfony/error-handler": "v6.4.7",
-        "symfony/event-dispatcher": "v6.4.7",
+        "symfony/error-handler": "v6.4.8",
+        "symfony/event-dispatcher": "v6.4.8",
         "symfony/event-dispatcher-contracts": "v3.4.2",
-        "symfony/filesystem": "v6.4.7",
-        "symfony/finder": "v6.4.7",
-        "symfony/framework-bundle": "v6.4.7",
-        "symfony/http-foundation": "v6.4.7",
-        "symfony/http-kernel": "v6.4.7",
-        "symfony/intl": "v6.4.7",
-        "symfony/mailer": "v6.4.7",
-        "symfony/mime": "v6.4.7",
+        "symfony/filesystem": "v6.4.8",
+        "symfony/finder": "v6.4.8",
+        "symfony/framework-bundle": "v6.4.8",
+        "symfony/http-foundation": "v6.4.8",
+        "symfony/http-kernel": "v6.4.8",
+        "symfony/intl": "v6.4.8",
+        "symfony/mailer": "v6.4.8",
+        "symfony/mime": "v6.4.8",
         "symfony/polyfill-ctype": "v1.28.0",
         "symfony/polyfill-iconv": "v1.28.0",
         "symfony/polyfill-intl-grapheme": "v1.28.0",
@@ -188,18 +191,18 @@
         "symfony/polyfill-php80": "v1.29.0",
         "symfony/polyfill-php81": "v1.29.0",
         "symfony/polyfill-php83": "v1.28.0",
-        "symfony/process": "v6.4.7",
-        "symfony/psr-http-message-bridge": "v6.4.7",
-        "symfony/routing": "v6.4.7",
-        "symfony/serializer": "v6.4.7",
+        "symfony/process": "v6.4.8",
+        "symfony/psr-http-message-bridge": "v6.4.8",
+        "symfony/routing": "v6.4.8",
+        "symfony/serializer": "v6.4.8",
         "symfony/service-contracts": "v3.4.2",
-        "symfony/string": "v6.4.7",
+        "symfony/string": "v6.4.8",
         "symfony/translation-contracts": "v3.4.2",
-        "symfony/twig-bridge": "v6.4.7",
-        "symfony/validator": "v6.4.7",
-        "symfony/var-dumper": "v6.4.7",
-        "symfony/var-exporter": "v6.4.7",
-        "symfony/yaml": "v6.4.7",
+        "symfony/twig-bridge": "v6.4.8",
+        "symfony/validator": "v6.4.8",
+        "symfony/var-dumper": "v6.4.8",
+        "symfony/var-exporter": "v6.4.8",
+        "symfony/yaml": "v6.4.8",
         "twig/intl-extra": "v3.9.0",
         "twig/twig": "v3.8.0",
         "webflo/drupal-finder": "1.3.0",
