--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -92,6 +92,7 @@
         "pantheon-systems/pantheon_domain_masking": "^2.0",
         "pantheon-systems/upstream-management": "^1.0",
         "simplesamlphp/simplesamlphp": "^2.2",
+        "symfony/serializer": "6.4.7",
         "drupal/config_update": "^2.0@alpha"
     },
     "config": {
