--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -92,7 +92,6 @@
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
         "pantheon-systems/upstream-management": "1.0.1",
         "simplesamlphp/simplesamlphp": "v2.2.2",
-        "symfony/serializer": "v6.4.7",
         "drupal/config_update": "2.0.0-alpha3",
         "asm89/stack-cors": "v2.2.0",
         "chi-teck/drupal-code-generator": "3.6.0",
@@ -164,23 +163,23 @@
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
         "simplesamlphp/simplesamlphp-assets-base": "v2.2.0",
-        "symfony/cache": "v6.4.8",
+        "symfony/cache": "v6.4.7",
         "symfony/cache-contracts": "v3.5.0",
-        "symfony/config": "v6.4.8",
-        "symfony/console": "v6.4.8",
-        "symfony/dependency-injection": "v6.4.8",
+        "symfony/config": "v6.4.7",
+        "symfony/console": "v6.4.7",
+        "symfony/dependency-injection": "v6.4.7",
         "symfony/deprecation-contracts": "v3.4.0",
-        "symfony/error-handler": "v6.4.8",
-        "symfony/event-dispatcher": "v6.4.8",
+        "symfony/error-handler": "v6.4.7",
+        "symfony/event-dispatcher": "v6.4.7",
         "symfony/event-dispatcher-contracts": "v3.4.2",
-        "symfony/filesystem": "v6.4.8",
-        "symfony/finder": "v6.4.8",
-        "symfony/framework-bundle": "v6.4.8",
-        "symfony/http-foundation": "v6.4.8",
-        "symfony/http-kernel": "v6.4.8",
-        "symfony/intl": "v6.4.8",
-        "symfony/mailer": "v6.4.8",
-        "symfony/mime": "v6.4.8",
+        "symfony/filesystem": "v6.4.7",
+        "symfony/finder": "v6.4.7",
+        "symfony/framework-bundle": "v6.4.7",
+        "symfony/http-foundation": "v6.4.7",
+        "symfony/http-kernel": "v6.4.7",
+        "symfony/intl": "v6.4.7",
+        "symfony/mailer": "v6.4.7",
+        "symfony/mime": "v6.4.7",
         "symfony/polyfill-ctype": "v1.28.0",
         "symfony/polyfill-iconv": "v1.28.0",
         "symfony/polyfill-intl-grapheme": "v1.28.0",
@@ -192,21 +191,47 @@
         "symfony/polyfill-php80": "v1.29.0",
         "symfony/polyfill-php81": "v1.29.0",
         "symfony/polyfill-php83": "v1.28.0",
-        "symfony/process": "v6.4.8",
-        "symfony/psr-http-message-bridge": "v6.4.8",
-        "symfony/routing": "v6.4.8",
+        "symfony/process": "v6.4.7",
+        "symfony/psr-http-message-bridge": "v6.4.7",
+        "symfony/routing": "v6.4.7",
+        "symfony/serializer": "v6.4.7",
         "symfony/service-contracts": "v3.4.2",
-        "symfony/string": "v6.4.8",
+        "symfony/string": "v6.4.7",
         "symfony/translation-contracts": "v3.4.2",
         "symfony/twig-bridge": "v6.4.8",
-        "symfony/validator": "v6.4.8",
-        "symfony/var-dumper": "v6.4.8",
-        "symfony/var-exporter": "v6.4.8",
-        "symfony/yaml": "v6.4.8",
+        "symfony/validator": "v6.4.7",
+        "symfony/var-dumper": "v6.4.7",
+        "symfony/var-exporter": "v6.4.7",
+        "symfony/yaml": "v6.4.7",
         "twig/intl-extra": "v3.9.0",
         "twig/twig": "v3.8.0",
         "webflo/drupal-finder": "1.3.0",
         "webmozart/assert": "1.11.0"
+    },
+    "conflict": {
+        "symfony/yaml": "6.4.8",
+        "symfony/validator": "6.4.8",
+        "symfony/string": "6.4.8",
+        "symfony/serializer": "6.4.8",
+        "symfony/psr-http-message-bridge": "6.4.8",
+        "symfony/process": "6.4.8",
+        "symfony/mime": "6.4.8",
+        "symfony/mailer": "6.4.8",
+        "symfony/intl": "6.4.8",
+        "symfony/http-kernel": "6.4.8",
+        "symfony/http-foundation": "6.4.8",
+        "symfony/error-handler": "6.4.8",
+        "symfony/dependency-injection": "6.4.8",
+        "symfony/console": "6.4.8",
+        "symfony/config": "6.4.8",
+        "symfony/cache": "6.4.8",
+        "symfony/var-exporter": "6.4.8",
+        "symfony/var-dumper": "6.4.8",
+        "symfony/routing": "6.4.8",
+        "symfony/framework-bundle": "6.4.8",
+        "symfony/finder": "6.4.8",
+        "symfony/filesystem": "6.4.8",
+        "symfony/event-dispatcher": "6.4.8"
     },
     "config": {
         "allow-plugins": {
