--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -49,6 +49,7 @@
         "drupal/anchor_link": "3.0.0-beta1",
         "drupal/antibot": "2.0.3",
         "drupal/better_social_sharing_buttons": "4.0.7",
+        "drupal/ckeditor5_bootstrap_accordion": "dev-1.x",
         "drupal/ckeditor5_icons": "1.1.1",
         "drupal/ckeditor5_paste_filter": "1.0.1",
         "drupal/consumer_image_styles": "4.0.8",
@@ -57,7 +58,7 @@
         "drupal/core-recommended": "10.2.7",
         "drupal/devel": "5.2.1",
         "drupal/entity_embed": "1.6.0",
-        "drupal/externalauth": "2.0.5",
+        "drupal/externalauth": "2.0.6",
         "drupal/features": "3.14.0",
         "drupal/field_group": "3.4.0",
         "drupal/focal_point": "2.1.0",
@@ -81,7 +82,7 @@
         "drupal/recaptcha_v3": "2.0.2",
         "drupal/redirect": "1.9.0",
         "drupal/responsive_preview": "2.1.1",
-        "drupal/scheduler": "2.0.3",
+        "drupal/scheduler": "2.0.4",
         "drupal/shortcode": "2.0.2",
         "drupal/simple_sitemap": "4.1.9",
         "drupal/simplesamlphp_auth": "4.0.0",
@@ -106,17 +107,17 @@
         "consolidation/self-update": "2.2.0",
         "consolidation/site-alias": "4.1.0",
         "consolidation/site-process": "5.4.0",
-        "dflydev/dot-access-data": "v3.0.2",
+        "dflydev/dot-access-data": "v3.0.3",
         "doctrine/annotations": "1.14.3",
         "doctrine/common": "3.4.4",
         "doctrine/deprecations": "1.1.3",
         "doctrine/event-manager": "2.0.1",
         "doctrine/lexer": "2.1.1",
         "doctrine/persistence": "3.3.3",
-        "drupal/captcha": "2.0.5",
+        "drupal/captcha": "2.0.6",
         "drupal/consumers": "1.17.0",
         "drupal/core": "10.2.7",
-        "drupal/crop": "2.3.0",
+        "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
         "drupal/embed": "1.7.0",
         "drupal/entity_reference_revisions": "1.11.0",
@@ -133,14 +134,14 @@
         "guzzlehttp/guzzle": "7.8.1",
         "guzzlehttp/promises": "2.0.2",
         "guzzlehttp/psr7": "2.6.2",
-        "justinrainbow/json-schema": "v5.2.13",
+        "justinrainbow/json-schema": "5.3.0",
         "laminas/laminas-escaper": "2.13.0",
         "laminas/laminas-feed": "2.22.0",
         "laminas/laminas-stdlib": "3.19.0",
         "league/container": "4.2.2",
         "masterminds/html5": "2.8.1",
         "mck89/peast": "v1.15.4",
-        "nikic/php-parser": "v5.0.2",
+        "nikic/php-parser": "v5.1.0",
         "pear/archive_tar": "1.4.14",
         "pear/console_getopt": "v1.4.3",
         "pear/pear-core-minimal": "v1.10.15",
@@ -160,27 +161,27 @@
         "ralouphie/getallheaders": "3.0.3",
         "robrichards/xmlseclibs": "3.1.1",
         "sebastian/diff": "4.0.6",
-        "simplesamlphp/assert": "v1.1.8",
+        "simplesamlphp/assert": "v1.1.9",
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.2.2",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.2.4",
         "symfony/cache": "v6.4.7",
         "symfony/cache-contracts": "v3.5.0",
         "symfony/config": "v6.4.7",
-        "symfony/console": "v6.4.7",
-        "symfony/dependency-injection": "v6.4.7",
+        "symfony/console": "v6.4.9",
+        "symfony/dependency-injection": "v6.4.9",
         "symfony/deprecation-contracts": "v3.4.0",
-        "symfony/error-handler": "v6.4.7",
+        "symfony/error-handler": "v6.4.9",
         "symfony/event-dispatcher": "v6.4.7",
         "symfony/event-dispatcher-contracts": "v3.4.2",
-        "symfony/filesystem": "v6.4.7",
+        "symfony/filesystem": "v6.4.9",
         "symfony/finder": "v6.4.7",
-        "symfony/framework-bundle": "v6.4.7",
+        "symfony/framework-bundle": "v6.4.9",
         "symfony/http-foundation": "v6.4.7",
-        "symfony/http-kernel": "v6.4.7",
+        "symfony/http-kernel": "v6.4.9",
         "symfony/intl": "v6.4.7",
-        "symfony/mailer": "v6.4.7",
-        "symfony/mime": "v6.4.7",
+        "symfony/mailer": "v6.4.9",
+        "symfony/mime": "v6.4.9",
         "symfony/polyfill-ctype": "v1.28.0",
         "symfony/polyfill-iconv": "v1.28.0",
         "symfony/polyfill-intl-grapheme": "v1.28.0",
@@ -195,18 +196,18 @@
         "symfony/process": "v6.4.7",
         "symfony/psr-http-message-bridge": "v6.4.7",
         "symfony/routing": "v6.4.7",
-        "symfony/serializer": "v6.4.7",
+        "symfony/serializer": "v6.4.9",
         "symfony/service-contracts": "v3.4.2",
-        "symfony/string": "v6.4.7",
+        "symfony/string": "v6.4.9",
         "symfony/translation-contracts": "v3.4.2",
-        "symfony/twig-bridge": "v6.4.8",
-        "symfony/validator": "v6.4.7",
-        "symfony/var-dumper": "v6.4.7",
-        "symfony/var-exporter": "v6.4.7",
+        "symfony/twig-bridge": "v6.4.9",
+        "symfony/validator": "v6.4.9",
+        "symfony/var-dumper": "v6.4.9",
+        "symfony/var-exporter": "v6.4.9",
         "symfony/yaml": "v6.4.7",
         "twig/intl-extra": "v3.9.0",
         "twig/twig": "v3.8.0",
-        "webflo/drupal-finder": "1.3.0",
+        "webflo/drupal-finder": "1.3.1",
         "webmozart/assert": "1.11.0"
     },
     "conflict": {
