--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -36,6 +36,7 @@
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
         "cu-boulder/ucb_custom_entities": "dev-main",
         "cu-boulder/ucb_default_content": "dev-main",
+        "cu-boulder/ucb_drush_commands": "dev-main",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
@@ -49,7 +50,7 @@
         "drupal/anchor_link": "^3.0@beta",
         "drupal/antibot": "^2.0",
         "drupal/better_social_sharing_buttons": "^4.0",
-        "drupal/ckeditor5_bootstrap_accordion": "^1.0@RC",
+        "drupal/ckeditor5_bootstrap_accordion": "^1.0",
         "drupal/ckeditor5_icons": "~1.0",
         "drupal/ckeditor5_paste_filter": "^1.0",
         "drupal/consumer_image_styles": "^4.0",
