--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -36,6 +36,7 @@
         "cu-boulder/ucb_ckeditor_plugins": "dev-main",
         "cu-boulder/ucb_custom_entities": "dev-main",
         "cu-boulder/ucb_default_content": "dev-main",
+        "cu-boulder/ucb_drush_commands": "dev-main",
         "cu-boulder/ucb_focal_image_enable": "dev-main",
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
@@ -79,8 +80,8 @@
         "drupal/paragraphs": "1.18.0",
         "drupal/pathauto": "1.13.0",
         "drupal/rebuild_cache_access": "1.10.0",
-        "drupal/recaptcha_v3": "2.0.2",
-        "drupal/redirect": "1.9.0",
+        "drupal/recaptcha_v3": "2.0.3",
+        "drupal/redirect": "1.10.0",
         "drupal/responsive_preview": "2.2.0",
         "drupal/scheduler": "2.0.4",
         "drupal/shortcode": "2.0.2",
@@ -119,7 +120,7 @@
         "drupal/core": "10.2.7",
         "drupal/crop": "2.4.0",
         "drupal/ctools": "4.1.0",
-        "drupal/embed": "1.8.0",
+        "drupal/embed": "1.9.0",
         "drupal/entity_reference_revisions": "1.12.0",
         "drupal/jsonapi_extras": "3.25.0",
         "drupal/token": "1.15.0",
