--- a/upstream-configuration/composer.json
+++ b/upstream-configuration/composer.json
@@ -41,6 +41,7 @@
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
+        "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
         "cweagans/composer-patches": "^1.7",
@@ -73,6 +74,7 @@
         "drupal/media_library_form_element": "^2.0",
         "drupal/menu_block": "^1.10",
         "drupal/menu_firstchild": "^2.1",
+        "drupal/menu_item_extras": "^3.0",
         "drupal/metatag": "^2.0",
         "drupal/migrate_plus": "^6.0",
         "drupal/migrate_tools": "^6.0",
