--- a/upstream-configuration/locked/composer.json
+++ b/upstream-configuration/locked/composer.json
@@ -41,6 +41,7 @@
         "cu-boulder/ucb_migration_shortcodes": "dev-main",
         "cu-boulder/ucb_person_title": "dev-main",
         "cu-boulder/ucb_site_configuration": "dev-main",
+        "cu-boulder/ucb_styled_block": "dev-main",
         "cu-boulder/ucb_third_party_libraries": "dev-main",
         "cu-boulder/ucb_user_invite": "dev-main",
         "cweagans/composer-patches": "1.7.3",
@@ -73,13 +74,14 @@
         "drupal/media_library_form_element": "2.0.6",
         "drupal/menu_block": "1.13.0",
         "drupal/menu_firstchild": "2.1.0",
+        "drupal/menu_item_extras": "3.0.2",
         "drupal/metatag": "2.0.2",
         "drupal/migrate_plus": "6.0.4",
         "drupal/migrate_tools": "6.0.4",
         "drupal/pantheon_advanced_page_cache": "2.2.0",
         "drupal/paragraphs": "1.18.0",
         "drupal/pathauto": "1.13.0",
-        "drupal/rebuild_cache_access": "1.10.0",
+        "drupal/rebuild_cache_access": "1.11.0",
         "drupal/recaptcha_v3": "2.0.3",
         "drupal/redirect": "1.10.0",
         "drupal/responsive_preview": "2.2.0",
@@ -94,7 +96,7 @@
         "pantheon-systems/drupal-integrations": "10.0.1",
         "pantheon-systems/pantheon_domain_masking": "2.0.1",
         "pantheon-systems/upstream-management": "1.0.1",
-        "simplesamlphp/simplesamlphp": "v2.2.2",
+        "simplesamlphp/simplesamlphp": "v2.3.0",
         "drupal/config_update": "2.0.0-alpha3",
         "asm89/stack-cors": "v2.2.0",
         "chi-teck/drupal-code-generator": "3.6.1",
@@ -158,7 +160,7 @@
         "psr/http-client": "1.0.3",
         "psr/http-factory": "1.0.2",
         "psr/http-message": "2.0",
-        "psr/log": "3.0.0",
+        "psr/log": "3.0.1",
         "psy/psysh": "v0.12.4",
         "ralouphie/getallheaders": "3.0.3",
         "robrichards/xmlseclibs": "3.1.1",
@@ -166,7 +168,9 @@
         "simplesamlphp/assert": "v1.2.1",
         "simplesamlphp/composer-module-installer": "v1.3.4",
         "simplesamlphp/saml2": "v4.6.12",
-        "simplesamlphp/simplesamlphp-assets-base": "v2.2.6",
+        "simplesamlphp/simplesamlphp-assets-base": "v2.2.7",
+        "simplesamlphp/xml-common": "v1.17.0",
+        "simplesamlphp/xml-security": "v1.8.5",
         "symfony/cache": "v6.4.10",
         "symfony/cache-contracts": "v3.5.0",
         "symfony/config": "v6.4.7",
@@ -184,6 +188,7 @@
         "symfony/intl": "v6.4.7",
         "symfony/mailer": "v6.4.9",
         "symfony/mime": "v6.4.9",
+        "symfony/password-hasher": "v6.4.8",
         "symfony/polyfill-ctype": "v1.28.0",
         "symfony/polyfill-iconv": "v1.28.0",
         "symfony/polyfill-intl-grapheme": "v1.28.0",
